--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,31 @@
     <log4j.version>2.11.2</log4j.version>
     <swagger.version>2.8.0</swagger.version>
   </properties>
+  <repositories>
 
+    <repository>
+
+      <id>nexus</id>
+
+      <name>nexus</name>
+
+      <url>http://192.168.1.8:8082/repository/maven-public/</url>
+
+      <releases>
+
+        <enabled>true</enabled>
+
+      </releases>
+
+      <snapshots>
+
+        <enabled>true</enabled>
+
+      </snapshots>
+
+    </repository>
+
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -144,7 +168,7 @@
     <dependency>
       <groupId>com.hx</groupId>
       <artifactId>member-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0-RELEASE</version>
     </dependency>
   </dependencies>
 
