--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
       <artifactId>spring-webmvc</artifactId>
       <version>5.0.2.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>5.0.2.RELEASE</version>
+    </dependency>
     <!--日志相关-->
     <dependency>
       <groupId>commons-logging</groupId>
